Feature/27 password reset (#30)
* Update `.idea/discord.xml` to modify `show` value from `ASK` to `APPLICATION`

* #27 Add password reset functionality with controller, mailer, and API integration. Implement rate limiting for password reset requests.

* #27 Add forgot password and reset password components with routing, validation, and API integration

* Update app/controllers/api/password_resets_controller.rb


* Update app/views/password_reset_mailer/reset_password_email.text.erb


* #27 Fix spacing inconsistencies across multiple files to adhere to style guidelines

* #27 Remove example passwords to hopefully appease git guardian checks

---------
