# config/routes.rb
@@ -16,6 +16,10 @@ Rails.application.routes.draw do
 
     # Registration routes
     post "/signup", to: "users#create"
+
+    # Password reset routes
+    resources :password_resets, only: [ :create, :update ], param: :token
+
     # Admin routes
     resources :teams
     resources :positions
